--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,6 +9,7 @@ import { SITE_TITLE } from '../consts';
 		<div class="internal-links">
 			<HeaderLink href="/">Home</HeaderLink>
 			<HeaderLink href="/blog">Blog</HeaderLink>
+			<HeaderLink href="https://8bit.frop.prof">8bit</HeaderLink>
 		</div>
 		<div class="social-links">
 			<a href="/rss.xml" target="_blank">
