--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ import profile from '../images/me.jpeg';
 		<Header />
 		<main>
 			<div class="profile">
-				<Image src={profile} alt="My face." width={250} />
+				<img src={"/me.jpeg"} alt="My face." width={250} />
 				<div>
 					<span class="name">Luke Wilson</span><br/>
 					lukewilson.dev@gmail.com<br/>
